--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <script src='https://aframe.io/releases/0.9.2/aframe.min.js'></script>
     <script src="https://raw.githack.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
     <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
+    <script>
+        THREEx.ArToolkitContext.baseURL = 'https://raw.githack.com/jeromeetienne/ar.js/master/three.js/'
+    </script>
 </head>
 
 <body style='margin: 0; overflow: hidden;'>
@@ -16,6 +19,6 @@
         arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
         
         <a-camera gps-camera rotation-reader></a-camera>
-        <a-entity gltf-model="C:\Users\mathi\OneDrive\Bureau\Ynov\Cours\M1 Dev Web\Challenge 72h\test-arjs\assets\portal\portal_1.gltf" rotation="0 90 0" scale="20 20 20" gps-entity-place="longitude: 3.065570; latitude: 50.640530;" animation-mixer/>
+        <a-entity gltf-model="./assets/portal/portal_1.gltf" rotation="0 90 0" scale="20 20 20" gps-entity-place="longitude: 3.065570; latitude: 50.640530;" animation-mixer/>
 	</a-scene>
 </body>
